# como

workspace/src/barc/: CMakeLists.txt
workspace/src/reference_monitor/: CMakeLists.txt  package.xml
workspace/src/reference_monitor/msg/: Attack_flag.msg  MITM.msg  Residual.msg
workspace/src/reference_monitor/src/choi/: choi.py
workspace/src/reference_monitor/src/imageAttack/: image_attack.py
workspace/src/reference_monitor/src/manInTheMiddle/: MITM.py
workspace/src/reference_monitor/src/ref_mon/: ref_mon.py
workspace/src/sim/: CMakeLists.txt  package.xml
workspace/src/sim/launch/: sim_main.launch
workspace/src/sim/src/: keyboard_manual.cpp
