<?xml version="1.0"?>
<package format="2">
  <name>sim</name>
  <version>0.0.0</version>
  <description>The sim package</description>

  <maintainer email="anja-ubuntu@todo.todo">anja-ubuntu</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>barc</build_depend>
  <build_depend>keyboard</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>barc</build_export_depend>
  <build_export_depend>keyboard</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>barc</exec_depend>
  <exec_depend>keyboard</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

</package>
